set mongodb with mongoose and connect with application

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NODE_ENV=DEVELOPMENT
 PORT=7000
 USER=James
-PASSWORD=BOND
+DATABASE=mongodb+srv://Arsen:<password>@cluster0.ece2ymf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=CV5MfBDRIkOf4oh1
