first step implementation of user sign-up and sign-in

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-NODE_ENV=DEVELOPMENT
+NODE_ENV=development
 PORT=7000
 USER=James
-DATABASE=mongodb+srv://Arsen:<password>@cluster0.ece2ymf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE=mongodb+srv://Arsen:<password>@cluster0.ece2ymf.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=CV5MfBDRIkOf4oh1
+
+JWT_SECRET=auth-ultra-secure-access-confirmed
+JWT_EXPIRES=3d
