--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
+    "@types/nodemailer": "^6.4.15",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
@@ -42,6 +43,7 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "slugify": "^1.6.6",
     "validator": "^13.12.0"
   }
