--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node ./dist/src/server.js",
+    "start": "node ./public/server.js",
     "build": "tsc",
     "dev": "nodemon **",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -49,7 +49,6 @@
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
-    "slugify": "^1.6.6",
-    "validator": "^13.12.0"
+    "slugify": "^1.6.6"
   }
 }
