--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node ./public/server.js",
+    "start": "node ./dist/server.js",
     "build": "tsc",
     "dev": "nodemon **",
     "test": "echo \"Error: no test specified\" && exit 1",
