--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node ./server.js",
+    "start": "node ./dist/server.js",
     "build": "tsc",
     "dev": "nodemon **",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
-    "debug": "ndb ./src/sserver.js"
+    "debug": "ndb ./src/sserver.js",
+    "build-and-start": "npm run build && npm run start"
   },
   "keywords": [
     "js",
@@ -49,6 +50,7 @@
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.12.0"
   }
 }
