--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.3.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.15",
     "eslint": "^8.57.0",
@@ -39,6 +41,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -49,7 +52,9 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "sharp": "^0.33.4",
     "slugify": "^1.6.6",
     "validator": "^13.12.0"
   }
